--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -6,7 +6,7 @@
 
     <div class="page-content extra-vertical-space">
       <div>Whether you are a senior in High School planning on enrolling at U of I, already attend U of I, are an elite athlete, or a total beginner, ITC/IXC strives to be a welcoming community for you. Please join our mailing list, and read more for more information!</div>
-      <div class="mailing-list extra-vertical-space"><md-button class="md-raised md-primary mailing-list-button" ng-click="openEmailSurvey()">Join our Mailing List</md-button></div>
+      <div class="mailing-list extra-vertical-space"><md-button class="md-raised md-primary mailing-list-button" ng-click="openEmailSurvey()" analytics-on="click" analytics-event="Opened email survey">Join our Mailing List</md-button></div>
 
       <div class="md-headline faq-title">FAQ</div>
       <div class="faq-question">Who are we?</div>
