--- a/app/views/results.html
+++ b/app/views/results.html
@@ -71,39 +71,36 @@
       <md-tab label="Top Performances">
         <md-tabs class="tabs" md-dynamic-height>
           <md-tab label="Cross Country">
-            <div class="two-column-table performance-table extra-vertical-space">
-              <div class="row md-body-2">5000m Run</div>
-              <md-divider></md-divider>
-              <div class="header row md-body-2">
-                <div class="left-column">Men</div>
-                <div class="right-column">Women</div>
+            <div class="top-performance-table" ng-repeat="performanceList in topPerformances['XC']">
+              <div class="md-body-2">{{ performanceList.name }}</div>
+              <div class="left-table">
+                <div class="row md-body-2">Men</div>
+                <md-divider></md-divider>
+                <div class="row md-body-1" ng-if="!performanceList.performances.maleRecords">
+                  Event not contested
+                </div>
+                <div ng-if="performanceList.performances.maleRecords">
+                  <div class="row md-body-1" ng-repeat-start="performance in performanceList.performances.maleRecords">
+                    <div class="athlete-name" ng-repeat="athlete in performance.athlete">{{ athlete.name }}</div>
+                    <div class="record"><span class="record-span">{{ performance.performance | xcTime }}</span></div>
+                  </div>
+                  <md-divider ng-repeat-end></md-divider>
+                </div>
               </div>
-              <md-divider></md-divider>
-              <div class="row md-body-1">
-                <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
-                <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
+              <div class="right-table">
+                <div class="row md-body-2">Women</div>
+                <md-divider></md-divider>
+                <div class="row md-body-1" ng-if="!performanceList.performances.femaleRecords">
+                  Event not contested
+                </div>
+                <div ng-if="performanceList.performances.femaleRecords">
+                  <div class="row md-body-1" ng-repeat-start="performance in performanceList.performances.femaleRecords">
+                    <div class="athlete-name" ng-repeat="athlete in performance.athlete">{{ athlete.name }}</div>
+                    <div class="record">{{ performance.performance | xcTime }}</div>
+                  </div>
+                  <md-divider ng-repeat-end></md-divider>
+                </div>
               </div>
-              <md-divider></md-divider>
-              <div class="row md-body-1">
-                <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
-                <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
-              </div>
-              <md-divider></md-divider>
-              <div class="row md-body-1">
-                <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
-                <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
-              </div>
-              <md-divider></md-divider>
-              <div class="row md-body-1">
-                <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
-                <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
-              </div>
-              <md-divider></md-divider>
-              <div class="row md-body-1">
-                <div class="left-column">Mike Kreiser <span class="performance">20:20.20</span></div>
-                <div class="right-column">Other Person <span class="performance">20:20.20</span></div>
-              </div>
-              <md-divider></md-divider>
             </div>
           </md-tab>
           <md-tab label="Indoor Track">
