Added records to records page and linked it with backend, added api tests and probably incorrect filter test and definitely incorrect result test, adjusted the style on the records page, removed outdoor 4x200 from events.js

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -324,6 +324,10 @@ md-menu-content {
 
 			.first-column, .third-column {
 				width: 40%;
+
+				.name{
+					margin-right: 5px;
+				}
 			}
 
 			.first-column {
