--- a/app/views/news.html
+++ b/app/views/news.html
@@ -5,23 +5,18 @@
 			<md-input-container class="news-year-selector">
         <label>Filter By Year</label>
         <md-select ng-model="selectedYear">
-          <md-option value="2016">2016</md-option>
-          <md-option value="2015">2015</md-option>
-          <md-option value="2014">2014</md-option>
-          <md-option value="2013">2013</md-option>
-        </md-select>
+          <md-option ng-repeat="(key, value) in news" ng-value="key" ng-selected="key === curYear">{{ key }}</md-option> 
+        </md-select >
       </md-input-container>
     </div>
-
     <div class="post-container">
-    	<div class="post">
-    		<div class="post-title">Something About How Great Our Team Is</div>
+    	<div class="post" ng-repeat="news in news[selectedYear] | orderObjectBy:'post_datetime':true">
+    		<div class="post-title">{{ ::news.post_subject }}</div>
     		<div class="post-metadata">
-    			<span class="post-author">Post Author</span> - <span class="post-date">1/1/2016 11:11:11</span>
+    			<span class="post-author">Posted by {{ ::news.author }}</span> - <span class="post-date">{{ ::news.post_datetime.substring(0,10) }}</span>
     		</div>
     		<div class="post-content">
-    			<p>hjkahsdfasdf</p>
-    			<p>ajfskldfjkasdhfjlaksdf</p>
+    			<p ng-bind-html="news.post_text | n12br"></p>
     		</div>
     	</div>
     </div>
