--- a/app/views/races.html
+++ b/app/views/races.html
@@ -9,42 +9,42 @@
       <div class="three-column-table">
         <div class="header row md-body-2">
           <div class="first-column">Meet</div>
-          <div class="second-column"">Date</div>
-          <div class="third-column"">Location</div>
+          <div class="second-column">Date</div>
+          <div class="third-column">Location</div>
         </div>
         <md-divider></md-divider>
-        <div class="row md-body-1" ng-repeat="meet in indoorMeets">
+        <div class="row md-body-1" ng-repeat="meet in crossMeets">
           <div class="first-column">{{meet.event}}</div>
-          <div class="second-column"">{{meet.date}}</div>
-          <div class="third-column"">{{meet.location}}</div>
+          <div class="second-column">{{meet.date}}</div>
+          <div class="third-column">{{meet.location}}</div>
         </div>
       </div>
       <div class="md-headline extra-vertical-space">2017 Indoor Season</div>
       <div class="three-column-table">
         <div class="header row md-body-2">
           <div class="first-column">Meet</div>
-          <div class="second-column"">Date</div>
-          <div class="third-column"">Location</div>
+          <div class="second-column">Date</div>
+          <div class="third-column">Location</div>
         </div>
         <md-divider></md-divider>
         <div class="row md-body-1" ng-repeat="meet in indoorMeets">
           <div class="first-column">{{meet.event}}</div>
-          <div class="second-column"">{{meet.date}}</div>
-          <div class="third-column"">{{meet.location}}</div>
+          <div class="second-column">{{meet.date}}</div>
+          <div class="third-column">{{meet.location}}</div>
         </div>
       </div>
       <div class="md-headline extra-vertical-space">2017 Outdoor Season</div>
       <div class="three-column-table">
         <div class="header row md-body-2">
           <div class="first-column">Meet</div>
-          <div class="second-column"">Date</div>
-          <div class="third-column"">Location</div>
+          <div class="second-column">Date</div>
+          <div class="third-column">Location</div>
         </div>
         <md-divider></md-divider>
-        <div class="row md-body-1" ng-repeat="meet in indoorMeets">
+        <div class="row md-body-1" ng-repeat="meet in outdoorMeets">
           <div class="first-column">{{meet.event}}</div>
-          <div class="second-column"">{{meet.date}}</div>
-          <div class="third-column"">{{meet.location}}</div>
+          <div class="second-column">{{meet.date}}</div>
+          <div class="third-column">{{meet.location}}</div>
         </div>
       </div>
     </div>
